# kindleanki

./: .gitignore  LICENSE  README.md  pyproject.toml  scripts.py
.github/workflows/: dependabot-auto-merge.yml  test-prs.yml
app/: __init__.py  ankicards.py  dictionaryapi_webclient.py  diff.py  diki_webclient.py  translator.py  utils.py  vocab.py
tests/: test_simple.py
