[tool.poetry]
name = "kindleanki"
version = "0.0.1"
description = "Kindle to Anki exporter"
authors = ["Michał Kowol <michal.kowol@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.9"
requests = "2.32.2"
deepl = "1.18.0"
attrs = "23.2.0"
dataclasses-json = "0.6.6"
alive-progress = "3.1.5"

[tool.poetry.scripts]
app = "app:main"
test = "scripts:test"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
