[tool.poetry]
name = "kindleanki"
version = "0.0.1"
description = "Kindle to Anki exporter"
authors = ["Michał Kowol <michal.kowol@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.12"
requests = "2.32.5"
deepl = "1.22.0"
attrs = "25.4.0"
dataclasses-json = "0.6.7"
alive-progress = "3.3.0"

[tool.poetry.scripts]
app = "app:main"
test = "scripts:test"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
